<resources>
    <string name="app_name">AudioTest</string>
    <string name="title_activity_main">Tīng​Shuō​</string>
    <string name="playButtonLabel">说</string>
    <string name="hanziButtonLabel">字</string>
    <string name="repeatButtonLabel">重</string>
    <string name="pauseButtonLabel">休</string>
    <string name="eng_Play">Play</string>
    <string name="eng_ViewText">View Text</string>
    <string name="eng_Repeat">Repeat</string>
    <string name="eng_Pause">Pause</string>
    <string name="startTime">0:00</string>
    <string name="buttonLabel">stuff</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="reset">Reset</string>
    <string name="reallyReset">Reset timer and discard current clip?</string>
    <string name="quit">Confirm quit</string>
    <string name="reallyQuit">Quit?  This will reset timer and discard current clip.</string>
    <string name="NightMode">Night Mode</string>
    <string name="options_title">Options</string>
    <string name="help">Help Me</string>
    <string name="new_game">Start new game</string>
    <string name="history">Show History</string>
    <string name="email_a_friend">eMail this clip</string>
    <string name="show_use_dur">Show app use</string>
    <string name="select_lang">Change Language</string>
    <string name="clip1">Play clip1</string>
    <string name="clip2">Play clip2</string>
    <string name="clip3">Play clip3</string>
    <string name="clip4">Play clip4</string>
    <string name="clip5">Play clip5</string>
    <string name="clip6">Play clip6</string>
    <string name="clip7">Play clip7</string>
    <string name="clip8">Play clip8</string>
    <string name="clip9">Play clip9</string>
    <string name="clip10">Play clip10</string>
    <string name="Language_Mandarin">Set Language to Mandarin</string>
    <string name="Language_English">Set Language to English</string>
    <string name="enterEmail">Enter Email Address</string>
    <string name="eMailAddress">Email Address</string>
    <string name="Subject">Subject</string>
    <string name="Comment">Comment</string>
    <string name="Start">Start</string>
    <string name="sendEmail">Send Email</string>
    <string name="blank"></string>
    <string name="none">No clips ready</string>
    <string name="translate">Translate current Hanzi</string>
    <string name="dialog_message">Select default settings</string>
    <string name="dialog_title">Language</string>
    <string name="english">English</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title">Titile</string>
    <string name="getTranslation">Translate text</string>
    <string name="nightMode_toast">Night Mode</string>
    <string name="dayMode_toast">Day Mode</string>
    <string name="updatingFiles_toast">Updating Files</string>
    <string name="updatingCompleted_toast">Updating Completed</string>
    <string name="sending_toast">Sending</string>
    <string name="sent_toast">Sent</string>
    <string name="unableToSend_toast">Unable To Send</string>
    <string name="chineseMode_toast">Chinese Mode</string>
    <string name="englishMode_toast">English Mode</string>
    <string name="totalUsage_toast">usage</string>
    <string name="lookUpButton">Look Up</string>
    <string name="showHistoryButton">Show History</string>
    <string name="timeSpentButton">Total Time Spent</string>
    <string name="englishButton">English</string>
    <string name="chineseButton">Chinese</string>
    <string name="shareButton">Share</string>
    <string name="updateButton">Update</string>
    <string name="exit">Exit</string>
</resources>